<?xml version="1.0"?>
<package format="3">
  <name>ros2_service_server</name>
  <version>0.0.0</version>
  <description>ROS2 C++ service server that adds two integers</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>